--- a/Release Linux/DEBIAN/control
+++ b/Release Linux/DEBIAN/control
@@ -1,10 +1,9 @@
 Package: ShufflePictures
-Version: 1.1-1
+Version: 1.0-1
 Provides: ShufflePictures
 Maintainer: Igor Martinov <gosha56good@gmail.com>
 Architecture: all
 Section: devel
 Description: Shuffle Pictures
-Depends: libqt4-core, libqt4-gui, libsource-highlight-qt4-3
-Build-Depends: debhelper (>= 7), g++, make, libqt4-dev, qt4-qmake, libsource-highlight-qt4-3
+Build-Depends: g++, make, qt5-qmake
 Priority: optional
