--- a/Release Linux/DEBIAN/control
+++ b/Release Linux/DEBIAN/control
@@ -5,5 +5,6 @@ Maintainer: Igor Martinov <gosha56good@gmail.com>
 Architecture: all
 Section: devel
 Description: Shuffle Pictures
+Depends: qtdeclarative5-dev, qtdeclarative5-dev-tools, libqt5declarative5, qtquick1-5-dev, qtscript5-dev, libqt5svg5-dev, qttools5-dev-tools, qttools5-dev, libqt5opengl5-dev, qtquick1-qml-plugins 
 Build-Depends: g++, make, qt5-qmake
 Priority: optional
